--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,12 +36,15 @@
     <string name="title_drawer_2"><font fgcolor="#2264cf">Quản Lý Hệ Thống</font></string>
     <string name="title_drawer_3"><font fgcolor="#2264cf">Thông Tin Người Dùng</font></string>
     <string name="title_drawer_4"><font fgcolor="#2264cf">Thông Tin Hỗ Trợ</font></string>
+    <string name="title_drawer_map_quanly"><font fgcolor="#2264cf">Công cụ quản lý</font></string>
+    <string name="title_drawer_map_update"><font fgcolor="#2264cf">Công cụ cập nhật</font></string>
     <string name="title_infor_ticket">Thông Tin Ticket</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Giám sát hạ tầng mạng GPON</string>
     <string name="nav_header_title_docsis">Giám sát hạ tầng mạng Docsis</string>
     <string name="nav_header_title_docsis_mn">Monitor Docsis Miền Nam</string>
+    <string name="nav_header_map_docsis">Giám sát bản đồ hạ tầng mạng Docsis</string>
     <string name="nav_header_subtitle">Trung tâm Hạ Tầng Viễn Thông</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
@@ -56,6 +59,9 @@
     <string name="menu_support">Support System</string>
     <string name="menu_sigout">Đăng Xuất</string>
     <string name="menu_home">Danh mục hệ thống</string>
+    <string name="menu_maping_nhanh">Bản đồ sự cố nhánh</string>
+    <string name="menu_maping_capnhat_cm">Cập nhật thông tin CM</string>
+    <string name="menu_maping_capnhat_dokiem">Cập nhật thông tin đo kiểm</string>
 
     <string-array name="tools_array">
         <item>PPPoE</item>
@@ -67,8 +73,9 @@
     <string name="tab_text_1">Tab 1</string>
     <string name="tab_text_2">Tab 2</string>
     <string name="title_activity_docsis_mb">docsis_mb</string>
-
     <string name="menu_node">Thông tin Node</string>
     <string name="menu_cablemodem">Thông tin CM </string>
-    <string name="menu_send">Send</string>
+    <string name="menu_send">Tài liệu hướng dẫn</string>
+    <string name="menu_ticket_gpon">Ticket GPON</string>
+    <string name="title_activity_maping_docsis">maping_docsis</string>
 </resources>
